[tool.poetry]
name = "fastapi-vnpay"
version = "0.1.0"
description = ""
authors = ["hoanghuumanh54 <hoanghuumanh54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
